Removed unnecessary line and removed zip file from repo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Teespring Product Page</title>
-        <meta name="description" content="Teespring tee shirt products">
+        <meta name="description" content="Teespring tee shirt product page">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/application.css">
@@ -26,7 +24,7 @@
             </section>
 
             <section id="product-selector"></section>
-            
+
         </div>
 
         <script src="js/main.js"></script>
